crates/cox-tui/src/snapshots/cox_tui__modal__tests__question_modal_labels_mcp_server.snap
---
source: crates/cox-tui/src/modal.rs
expression: text
---
 mcp:github asks: mcp Sign up — Name
 1) send  2) edit  3) decline
 > ▏   Enter sends · Esc dismisses
