crates/cox-tui/src/snapshots/cox_tui__modal__tests__widened_plugin_grant_shows_the_diff.snap
---
source: crates/cox-tui/src/modal.rs
expression: "render_grant(&plugin_grant(&[\"model:code\"], &[\"model:cheap\"], None))"
---
 plugin Git Glance (git-glance) wants to load · digest aaaaaaaaaaaa
 Shows a one-line git summary in the status bar
 wants: model:code
 no longer asks for: model:cheap
 [y]es  [n]o
